src/objects/MCAR__c.object
<CustomObject>
    <fields>
        <fullName>Product_Technology__c</fullName>
        <description>Example: CDMA, GSM, LTE, WiMAX</description>
        <inlineHelpText>Select a value from the drop-down list: CDMA, GSM, LTE, WiMAX</inlineHelpText>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>AA (Application Analytics)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA-CT (AA Common Central Team)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-FANBI (ALU Fixed Networks NBI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-FNA (ALU-FNA - New Activities)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-FND (Fixed Networks)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-MVM (ALU - Multivendor Maintenance)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IONCD (ION Central Team)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IONIPR (ALU ION IP Routing)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IONNBI (ION OPTICS NBI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IONOP (ION - OPTICS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IONVID (ALU-ION-IP VIDEO )</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-3PI (3PI - 3rd Party Integration)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-COPR (ALU-MN Project related)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-HLN (ALU-MN HLN (backlog))</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-MCT (MOBILE CENTRAL TEAM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-MOB (MN-MOBILE )</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-MSA (ALU-MN Service Assurance)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-MSI (MN - SDM - IMS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-MSPD (Managed Serv. andCyber Security)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-NBI (Network Build and Implementat. (backlog))</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-WNBI (Wireless Network Build and Implement.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-WTD (MOBILE Wireless Transmission)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH-BLD (Bell Labs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH-CS (Consulting Services)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH-IPCS (Intellectual Property Business Division)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH-OTHFUN (OTHER R and D FUNDING)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH-RFS (Radio Frequency Systems)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH-SMD (Submarine)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TECHG-NTECH (Technologies)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-AMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QIRS_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Display QIRS record</description>
        <label>QIRS ID</label>
        <referenceTo>QIRS__c</referenceTo>
        <relationshipLabel>MCARs-QIRS-Lookup</relationshipLabel>
        <relationshipName>MCARs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMA_Carrier__c</fullName>
        <description>Enter the transportation carrier</description>
        <inlineHelpText>Enter the transportation carrier</inlineHelpText>
        <label>RMA Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_Notify__c</fullName>
        <label>Re-Notify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Exact same quality issues are found again within one year after the close date of the last MCAR related to these issues</inlineHelpText>
        <label>Recurring Issue?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_MCAR_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search &amp; enter an MCAR Case Number that is closely related to the case in question.</inlineHelpText>
        <label>Related MCAR Case</label>
        <referenceTo>MCAR__c</referenceTo>
        <relationshipLabel>MCARs</relationshipLabel>
        <relationshipName>MCARs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SANM_Chennai__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SANM-Chennai</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SANM_Haukipudas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SANM-Haukipudas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SANM_Kunshan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SANM-Kunshan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Closure_Notification__c</fullName>
        <description>Please check this box if you wish to notify &amp; congratulate your team for completing the MCAR</description>
        <inlineHelpText>Please check this box if you wish to notify &amp; congratulate your team for completing the MCAR</inlineHelpText>
        <label>Send Closure Notification</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shanghai__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Factory GM For Shanghai</description>
        <label>Shanghai</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Category_ID_ESN__c</fullName>
        <label>COM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Suzhou__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Factory GM For Suzhou .</description>
        <label>Suzhou</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tianjin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Factory GM of Tianjin</description>
        <label>Tianjin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2D_Reason__c</fullName>
        <label>2D Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2D_Reject_Date__c</fullName>
        <label>2D Reject Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2D_Status__c</fullName>
        <label>2D Status</label>
        <picklist>
            <picklistValues>
                <fullName>APPROVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REJECT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3D_Manufacturer_Response_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Confirmation that the manufacturer&apos;s response is complete.</description>
        <inlineHelpText>Confirmation that the manufacturer&apos;s response is complete.</inlineHelpText>
        <label>3D Manufacturer Response Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3D_Manufature_Response_Complete_Date__c</fullName>
        <label>3D Manufature Response Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X3D_Owner_Response__c</fullName>
        <description>MCAR Owner can provide additional comments here.</description>
        <inlineHelpText>MCAR Owner can provide additional comments here.</inlineHelpText>
        <label>3D Owner Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X3D_Reject_Date__c</fullName>
        <description>We used this field in Classes ,Trigger only</description>
        <label>3D Reject Date Old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3D_Reject_Date_for_Reporting__c</fullName>
        <description>We are using this Field in reporting purpose only</description>
        <label>3D Reject Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X3D_Status__c</fullName>
        <description>MCAR Owner must approve or reject the responses &amp; actions that have been entered.</description>
        <inlineHelpText>MCAR Owner must approve or reject the responses &amp; actions that have been entered.</inlineHelpText>
        <label>3D Owner Approve / Reject</label>
        <picklist>
            <picklistValues>
                <fullName>APPROVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REJECT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X4D_Manufacturer_Response_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Confirmation that the manufacturer&apos;s response is complete.</description>
        <inlineHelpText>Confirmation that the manufacturer&apos;s response is complete.</inlineHelpText>
        <label>4D Manufacturer Response Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4D_Manufature_Response_Complete_Date__c</fullName>
        <label>4D Manufature Response Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X4D_Owner_Approve_Reject__c</fullName>
        <description>MCAR Owner must approve or reject the responses &amp; actions that have been entered.</description>
        <inlineHelpText>MCAR Owner must approve or reject the responses &amp; actions that have been entered.</inlineHelpText>
        <label>4D Owner Approve / Reject</label>
        <picklist>
            <picklistValues>
                <fullName>APPROVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REJECT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X4D_Owner_Response__c</fullName>
        <description>MCAR Owner can provide additional comments here.</description>
        <inlineHelpText>MCAR Owner can provide additional comments here.</inlineHelpText>
        <label>4D Owner Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X4D_Reject_Date__c</fullName>
        <description>We used this field in Classes ,Trigger only</description>
        <label>4D Reject Date Old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X4D_Reject_Date_for_Reporting__c</fullName>
        <description>We are using this Field in reporting purpose only</description>
        <label>4D Reject Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X4D__c</fullName>
        <label>4D</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X5D_Manufacturer_Response_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Confirmation that the manufacturer&apos;s response is complete.</description>
        <inlineHelpText>Confirmation that the manufacturer&apos;s response is complete.</inlineHelpText>
        <label>5D Manufacturer Response Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X5D_Manufature_Response_Complete_Date__c</fullName>
        <label>5D Manufature Response Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X5D_Reason__c</fullName>
        <description>MCAR Owner can provide additional comments here.</description>
        <inlineHelpText>MCAR Owner can provide additional comments here.</inlineHelpText>
        <label>5D Owner Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X5D_Reject_Date_for_Reporting__c</fullName>
        <description>We are using this Field in reporting purpose only</description>
        <label>5D Reject Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X5D_Status__c</fullName>
        <description>MCAR Owner must approve or reject the responses &amp; actions that have been entered.</description>
        <inlineHelpText>MCAR Owner must approve or reject the responses &amp; actions that have been entered.</inlineHelpText>
        <label>5D Owner Approve / Reject</label>
        <picklist>
            <picklistValues>
                <fullName>APPROVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REJECT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X5D__c</fullName>
        <label>5D</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X6D_Reason__c</fullName>
        <description>MCAR Owner can provide additional comments here.</description>
        <inlineHelpText>MCAR Owner can provide additional comments here.</inlineHelpText>
        <label>6D Owner Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X6D__c</fullName>
        <label>6D</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isContactCreatedForMCAR__c</fullName>
        <label>isContactCreatedForMCAR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>MCARs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MCAR_Status__c</columns>
        <columns>MCAR_Facility__c</columns>
        <columns>MCAR_Current_8D_Step__c</columns>
        <columns>MCAR_NSN_Code__c</columns>
        <columns>MCAR_Manufacturer__c</columns>
        <columns>MCAR_Creation_Date_Status_Open__c</columns>
        <columns>Category_Area_text__c</columns>
        <columns>Category_Group_text__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>MCAR_Part_Type__c</columns>
        <columns>MCAR_Part_Family__c</columns>
        <columns>MCAR_Days_MCAR_Open__c</columns>
        <columns>Product_Technology__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family__c</field>
            <operation>contains</operation>
            <value>LTE</value>
        </filters>
        <filters>
            <field>MCAR_Creation_Date_Status_Open__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2016</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Created_in_Last_7_Days</fullName>
        <columns>NAME</columns>
        <columns>MCAR_Creation_Date_Status_Open__c</columns>
        <columns>MCAR_Status__c</columns>
        <columns>MCAR_NSN_Code__c</columns>
        <columns>MCAR_Manufacturer__c</columns>
        <columns>MCAR_Mfg_Part_Number__c</columns>
        <columns>MCAR_2D_Prob_Desc__c</columns>
        <columns>MCAR_Facility__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MCAR_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opened in Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>MCAR_4D_Approved_Needed</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>MCAR_Status__c</columns>
        <columns>MCAR_Severity_Level__c</columns>
        <columns>MCAR_Days_MCAR_Open__c</columns>
        <columns>MCAR_4D_Due_Date__c</columns>
        <columns>MCAR_4D_Root_Cause__c</columns>
        <columns>X4D_Owner_Approve_Reject__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MCAR_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>X4D_Owner_Approve_Reject__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>X4D_Owner_Approve_Reject__c</field>
            <operation>equals</operation>
            <value>REJECT</value>
        </filters>
        <filters>
            <field>MCAR_4D_Due_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2007</value>
        </filters>
        <filters>
            <field>X3D_Status__c</field>
            <operation>equals</operation>
            <value>APPROVE</value>
        </filters>
        <label>MCAR 4D Approval Needed</label>
    </listViews>
    <listViews>
        <fullName>MCAR_5D_Approved_Needed</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>MCAR_Status__c</columns>
        <columns>MCAR_Days_MCAR_Open__c</columns>
        <columns>MCAR_5D_Due_Date__c</columns>
        <columns>MCAR_5D_Permanent_Corrective_Action__c</columns>
        <columns>X5D_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MCAR_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>X5D_Status__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>X5D_Status__c</field>
            <operation>equals</operation>
            <value>REJECT</value>
        </filters>
        <filters>
            <field>MCAR_5D_Due_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2007</value>
        </filters>
        <filters>
            <field>X4D_Owner_Approve_Reject__c</field>
            <operation>equals</operation>
            <value>APPROVE</value>
        </filters>
        <label>MCAR 5D Approval Needed</label>
    </listViews>
    <listViews>
        <fullName>MCAR_6D_Approved_Needed</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>MCAR_Status__c</columns>
        <columns>MCAR_Days_MCAR_Open__c</columns>
        <columns>MCAR_6D_Due_Date__c</columns>
        <columns>MCAR_6D_Ver_Corr_Action_Eff__c</columns>
        <columns>X6D_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MCAR_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>X6D_Status__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>X6D_Status__c</field>
            <operation>equals</operation>
            <value>REJECT</value>
        </filters>
        <filters>
            <field>MCAR_6D_Due_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2007</value>
        </filters>
        <filters>
            <field>X5D_Status__c</field>
            <operation>equals</operation>
            <value>APPROVE</value>
        </filters>
        <label>MCAR 6D Approval Needed</label>
    </listViews>
    <listViews>
        <fullName>MCAR_7D_Approved_Needed</fullName>
        <columns>NAME</columns>
        <columns>MCAR_Status__c</columns>
        <columns>MCAR_Days_MCAR_Open__c</columns>
        <columns>MCAR_7D_Due_Date__c</columns>
        <columns>MCAR_7D_Preventive_Actions__c</columns>
        <columns>X7D_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MCAR_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>X7D_Status__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>X7D_Status__c</field>
            <operation>equals</operation>
            <value>REJECT</value>
        </filters>
        <filters>
            <field>MCAR_7D_Due_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2007</value>
        </filters>
        <filters>
            <field>X6D_Status__c</field>
            <operation>equals</operation>
            <value>APPROVE</value>
        </filters>
        <label>MCAR 7D Approval Needed</label>
    </listViews>
    <listViews>
        <fullName>MCAR_Field_Failures</fullName>
        <columns>NAME</columns>
        <columns>MCAR_Status__c</columns>
        <columns>MCAR_NSN_Code__c</columns>
        <columns>MCAR_Creation_Date_Status_Open__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Category_Area__c</columns>
        <columns>Category_Group__c</columns>
        <columns>MCAR_Part_Type__c</columns>
        <columns>MCAR_Part_Family__c</columns>
        <columns>MCAR_Manufacturer__c</columns>
        <columns>MCAR_Days_MCAR_Open__c</columns>
        <columns>MCAR_Severity_Level__c</columns>
        <columns>MCAR_Closed_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>MCAR Field Failures</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MCAR_Field_Failures1</fullName>
        <columns>NAME</columns>
        <columns>MCAR_Status__c</columns>
        <columns>MCAR_2D_Prob_Desc__c</columns>
        <columns>MCAR_NSN_Code__c</columns>
        <columns>MCAR_Creation_Date_Status_Open__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>MCAR_Manufacturer__c</columns>
        <columns>MCAR_Customer_Name__c</columns>
        <columns>MCAR_Location__c</columns>
        <columns>MCAR_Time_In_Service__c</columns>
        <columns>Component_Current_Location__c</columns>
        <columns>Category_Group__c</columns>
        <columns>MCAR_Days_MCAR_Open__c</columns>
        <columns>MCAR_Severity_Level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MCAR_Defect_Location__c</field>
            <operation>equals</operation>
            <value>Customer Field</value>
        </filters>
        <label>MCAR Field Failures</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_MCAR_s</fullName>
        <columns>NAME</columns>
        <columns>MCAR_Status__c</columns>
        <columns>MCAR_Days_MCAR_Open__c</columns>
        <columns>MCAR_Severity_Level__c</columns>
        <columns>MCAR_NSN_Code__c</columns>
        <columns>MCAR_Manufacturer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>MCAR_Facility__c</columns>
        <columns>MCAR_Defect_Location__c</columns>
        <columns>MCAR_Failure_Type__c</columns>
        <columns>MCAR_Creation_Date_Status_Open__c</columns>
        <columns>MCAR_Closed_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>My MCAR&apos;s</label>
    </listViews>
    <listViews>
        <fullName>Open_MCAR_3D_Not_Approved</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>MCAR_Status__c</columns>
        <columns>MCAR_Severity_Level__c</columns>
        <columns>MCAR_Days_MCAR_Open__c</columns>
        <columns>MCAR_3D_Due_Date__c</columns>
        <columns>MCAR_Containment_Action__c</columns>
        <columns>X3D_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MCAR_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>X3D_Status__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>X3D_Status__c</field>
            <operation>equals</operation>
            <value>REJECT</value>
        </filters>
        <filters>
            <field>MCAR_3D_Due_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2007</value>
        </filters>
        <label>MCAR 3D Approval Needed</label>
    </listViews>
    <listViews>
        <fullName>Open_MCAR_with_All_8d_Steps_Approved</fullName>
        <columns>NAME</columns>
        <columns>MCAR_Status__c</columns>
        <columns>MCAR_Days_MCAR_Open__c</columns>
        <columns>MCAR_2D_Prob_Desc__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>X7D_Status__c</field>
            <operation>equals</operation>
            <value>APPROVE</value>
        </filters>
        <filters>
            <field>MCAR_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>X4D_Owner_Approve_Reject__c</field>
            <operation>equals</operation>
            <value>APPROVE</value>
        </filters>
        <filters>
            <field>X5D_Status__c</field>
            <operation>equals</operation>
            <value>APPROVE</value>
        </filters>
        <filters>
            <field>X6D_Status__c</field>
            <operation>equals</operation>
            <value>APPROVE</value>
        </filters>
        <label>MCAR 8D All Steps Approved, Still OPEN</label>
    </listViews>
    <listViews>
        <fullName>Opened_in_Last_7_Days</fullName>
        <columns>NAME</columns>
        <columns>MCAR_Creation_Date_Status_Open__c</columns>
        <columns>MCAR_Status__c</columns>
        <columns>MCAR_NSN_Code__c</columns>
        <columns>MCAR_Manufacturer__c</columns>
        <columns>MCAR_Mfg_Part_Number__c</columns>
        <columns>MCAR_2D_Prob_Desc__c</columns>
        <columns>MCAR_Facility__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MCAR_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Opened in Last 7 Days</label>
    </listViews>
    <listViews>
        <fullName>Oulu_Factory_MCARs</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>MCAR_Manufacturer__c</columns>
        <columns>MCAR_Creation_Date_Status_Open__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MCAR_Facility__c</field>
            <operation>equals</operation>
            <value>Oulu</value>
        </filters>
        <label>Oulu Factory MCARs</label>
        <sharedTo>
            <group>MCAR_NSN_SuperUser</group>
            <group>MCAR_NSN_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tzcew_Flextronics_Factory_MCARs</fullName>
        <columns>NAME</columns>
        <columns>MCAR_Status__c</columns>
        <columns>MCAR_Days_MCAR_Open__c</columns>
        <columns>MCAR_Severity_Level__c</columns>
        <columns>MCAR_NSN_Code__c</columns>
        <columns>MCAR_Manufacturer__c</columns>
        <columns>MCAR_Defect_Location__c</columns>
        <columns>MCAR_Failure_Type__c</columns>
        <columns>MCAR_Creation_Date_Status_Open__c</columns>
        <columns>MCAR_Closed_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>MCAR_Facility__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MCAR_Manufacturer__c</field>
            <operation>contains</operation>
            <value>flextronic</value>
        </filters>
        <label>Tzcew - Flextronics Customer MCARs</label>
        <sharedTo>
            <group>MCAR_EMS_Flextronics</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tzcew_Flextronics_Factory_MCARs1</fullName>
        <columns>NAME</columns>
        <columns>MCAR_Status__c</columns>
        <columns>Manufacture_Accepts_Fault__c</columns>
        <columns>MCAR_Days_MCAR_Open__c</columns>
        <columns>MCAR_Severity_Level__c</columns>
        <columns>MCAR_NSN_Code__c</columns>
        <columns>MCAR_Manufacturer__c</columns>
        <columns>MCAR_Facility__c</columns>
        <columns>MCAR_Defect_Location__c</columns>
        <columns>MCAR_Failure_Type__c</columns>
        <columns>MCAR_Creation_Date_Status_Open__c</columns>
        <columns>MCAR_Closed_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MCAR_Manufacturer__c</field>
            <operation>equals</operation>
            <value>chunxing</value>
        </filters>
        <label>Tzcew Flextronics Factory MCARs</label>
        <sharedTo>
            <group>MCAR_EMS_Flextronics</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>MCAR No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MCARs</pluralLabel>
    <recordTypes>
        <fullName>Closed_MCAR</fullName>
        <active>true</active>
        <description>Layout for Closed MCAR</description>
        <label>Closed MCAR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Draft_MCAR</fullName>
        <active>true</active>
        <description>This Record type is to be used when creating a Draft MCAR</description>
        <label>Draft MCAR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legacy_MCAR</fullName>
        <active>true</active>
        <description>This is the record type of MCAR imported from legacy MCAR application</description>
        <label>Legacy MCAR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open_MCAR</fullName>
        <active>true</active>
        <description>Default Record Type of a new MCAR</description>
        <label>Open MCAR</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>CreatedBy__c</fullName>
        <label>CreatedBy</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>MCAR_EMS_Flextronics__c</fullName>
        <label>MCAR EMS Flextronics</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>MCAR_EMS_Foxconn__c</fullName>
        <label>MCAR EMS Foxconn</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>MCAR_EMS_Jabil_Circuit__c</fullName>
        <label>MCAR EMS Jabil Circuit</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>MCAR_ESM_User__c</fullName>
        <label>MCAR_ESM_User</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>MCAR_Internal_Sub_Factory__c</fullName>
        <label>MCAR_Internal_Sub_Factory</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>MCAR_NSN_SuperUser__c</fullName>
        <label>MCAR_NSN_SuperUser</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>MCAR_NSN_User__c</fullName>
        <label>MCAR_NSN_User</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
    </sharingReasons>
</CustomObject>